# recursive-feature-elimination

./: Justfile  pyproject.toml
docs/: README.md  article.ipynb
src/: main.py
