[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["granthamtaylor <granthamtaylor@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
unionai = "0.1.16"
flytekit = "^1.11.0"
plotly = "^5.21.0"
scikit-learn = "^1.4.2"
flytekitplugins-deck-standard = "^1.11.0"
pandas = "^2.2.2"
polars = "^0.20.23"
flytekitplugins-envd = "^1.12.0"
ipykernel = "^6.29.4"
pip = "^24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
